Created basic main handlebars, created rough landing page

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,1 +1,21 @@
 {{! Handlebars specifically for the landing page for new users }}
+<div class="navbar">
+	<a href="login?">Sign up or Login</a>
+</div>
+<header>
+	<h1>{{title}}</h1>
+	<h2>Connecting Developers to Open Source Projects</h2>
+</header>
+<div class="container">
+	<p>Welcome to GitMatches, your source for finding high quality, open source
+		projects for you to collaborate on with other developers.</p>
+	<ol>
+		<li>Stat1: Need to figure out stats and connect to db!</li>
+		<li>Stat2</li>
+		<li>Stat3</li>
+	</ol>
+	<p>Sign up <a href="login?">here</a></p>
+</div>
+<footer>
+	<p>GitMatches, 2025 (need system to get current year lol)</p>
+</footer>
