--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,13 @@
 {{! Main handlebars layout to be used for all pages }}
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>{{title}}</title>
+		<link rel="stylesheet" href="/public/main.css" />
+	</head>
+	<body>
+		<main>
+			{{{body}}}
+		</main>
+	</body>
+</html>
