--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,9 @@
 {{! Handlebars for the login page }}
+<h1>{{title}}</h1>
+<form action="login?" method="POST">
+	<label for="emailAddress">Email</label>
+	<input type="text" id="emailAddress" name="emailAddress" />
+	<label for="password">Password</label>
+	<input type="text" id="password" name="password" />
+	<input type="submit" value="Login" />
+</form>
