--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,3 +7,4 @@
 	<input type="text" id="password" name="password" />
 	<input type="submit" value="Login" />
 </form>
+<a href="/register">Don't have an account? Join here!</a>
