--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 {{! Handlebars for the signup page }}
 <h1>GitMatches</h1>
-<form action="signup?" method="POST">
+<form action="/register" method="POST">
 	<label for="username">Username:</label>
 	<input type="text" id="username" name="username" />
 	<label for="password">Password:</label>
