Fixed the login and registration page routing, updated the handlebars for them as needed

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,6 +1,6 @@
 {{! Handlebars specifically for the landing page for new users }}
 <div class="navbar">
-	<a href="/login">Join or Login</a>
+	<a href="/auth/login">Join or Login</a>
 </div>
 <header>
 	<h1>GitMatches</h1>
