include client side script in login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,3 +16,4 @@
 	<input type="submit" value="Login" />
 </form>
 <a href="/auth/register">Don't have an account? Join here!</a>
+<script src="/public/js/loginRegisterVal.js"></script>
