include client side script in signup

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,3 +18,4 @@
 	<input type="submit" value="Sign Up" />
 </form>
 <a href="/auth/login">Have an account? Login here!</a>
+<script src="/public/js/loginRegisterVal.js"></script>
