fixed projects page can now render

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,10 @@
 {{! Main handlebars layout to be used for all pages }}
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>{{title}}</title>
-		<link rel="stylesheet" href="/public/main.css" />
+		<link rel="stylesheet" href="/public/css/main.css" />
 	</head>
 	<body>
 		<main>
