Fixed the profile routing to actually route to a user's profile

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,4 +3,5 @@
 	<a href="/projects">Projects</a>
 	<a href="/notifications">Notifications</a>
 	<a href="/profile">My Profile</a>
+	<a href="/auth/logout">Signout</a>
 </div>
