Started client-side project creation

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -3,7 +3,7 @@
 {{> navbar}}
 <div class="container">
     <h1>Projects</h1>
-    <a href="">Create new Project</a>
+    <a href="/projects/projectcreate">Create new Project</a>
     <div class="filterSelection">
         <form method="GET" action="/projects">
             <!-- Search by project name -->
@@ -54,3 +54,4 @@
         {{/if}}
     </div>
 </div>
+<script src="/public/js/createProject.js"></script>
