Prelim project display code, need to work out getting project creator username

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -3,13 +3,13 @@
 <div class="container">
     <div class="leftSide">
         <h1>{{project.title}}</h1>
-        <h2>Creator: {{project.creator}}</h2>
+        <h2>Creator: {{creatorUsername}}</h2>
         <h3>Created at {{project.createdAt}}</h3>
         <h3>Description</h3>
-        <p>{{project.description}}</p>
+        <p>{{project.content}}</p>
         <a href="{{project.repoLink}}" target="_blank">GitHub Repository</a>
         {{!-- Likes --}}
-        <form method="POST" action="/projects/{{project.id}}/like">
+        <form method="POST" action="/projects/{{project._id}}/like">
             <button type="submit">Like</button>
         </form>
         <span>{{project.likes}} Likes</span>
