--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -40,7 +40,7 @@
         <ol>
             {{#each posts}}
                 <li class="project">
-                    <a href="/{{this.id}}">{{this.title}}</a>
+                    <a href="/projects/{{this._id}}">{{this.title}}</a>
                     <ol>
                         {{#each topic_tags}}
                             <li>{{this}}</li>
