Fixed getting creator username of project, made password inputs actually password teehee, fixed seed file to wipe projects

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,9 +12,9 @@
 	<label for="username">Username:</label>
 	<input type="text" id="username" name="username" />
 	<label for="password">Password:</label>
-	<input type="text" id="password" name="password" />
+	<input type="password" id="password" name="password" />
 	<label for="confirmPass">Confirm Password:</label>
-	<input type="text" id="confirmPass" name="confirmPass" />
+	<input type="password" id="confirmPass" name="confirmPass" />
 	<input type="submit" value="Sign Up" />
 </form>
 <a href="/auth/login">Have an account? Login here!</a>
