--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
 	<label for="username">Username:</label>
 	<input type="text" id="username" name="username" />
 	<label for="password">Password:</label>
-	<input type="text" id="password" name="password" />
+	<input type="password" id="password" name="password" />
 	<input type="submit" value="Login" />
 </form>
 <a href="/auth/register">Don't have an account? Join here!</a>
