--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -11,9 +11,9 @@
 
             <!-- Filter by tags TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE (maybe so don't need to hardcode?) -->
             <label>Tags:</label>
-            <input type="checkbox" name="tags" value="web"> Web
-            <input type="checkbox" name="tags" value="ai"> AI
-            <input type="checkbox" name="tags" value="mobile"> Mobile
+            <input type="checkbox" name="tags" value="Web"> Web
+            <input type="checkbox" name="tags" value="Machine Learning"> Machine Learning
+            <input type="checkbox" name="tags" value="Mobile"> Mobile
 
             <!-- Filter by language/domain TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE(maybe so don't need to hardcode?)  -->
             <label for="language">Language:</label>
@@ -33,6 +33,7 @@
             </select>
 
             <button type="submit">Filter</button>
+            <button type="button" id="resetFilters">Reset Filters</button>
         </form>
     </div>
     <div class="projectsArea">
