made languages a multi select checkbox like tags, made it so the filter button can't be clicked unless a filter is in place (Was causing bugs)

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -16,13 +16,11 @@
             <input type="checkbox" name="tags" value="Mobile"> Mobile
 
             <!-- Filter by language/domain TODO: NEED TO FIGURE OUT HOW TO GET ALL OUR TAGS IN HERE(maybe so don't need to hardcode?)  -->
-            <label for="language">Language:</label>
-            <select name="language" id="language">
-                <option value="">All</option>
-                <option value="javascript">JavaScript</option>
-                <option value="python">Python</option>
-                <option value="java">Java</option>
-            </select>
+            <label>Languages:</label>
+            <input type="checkbox" name="languages" value="JavaScript"> JavaScript
+            <input type="checkbox" name="languages" value="Python"> Python
+            <input type="checkbox" name="languages" value="Java"> Java
+
 
             <!-- Filter by project status -->
             <label for="status">Status:</label>
