--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
 {{> navbar}}
 <div class="container">
     <div class="leftSide">
-        <img src="" alt="{{user.user_name}}">
+        <img src="{{user.gh_info.data.avatar_url}}" alt="{{user.user_name}}">
         <h1>{{user.user_name}}</h1>
         <form action="/profile/{{user._id}}/resume" method="POST" enctype="multipart/form-data" name="resume-form" id="resume-form">
             <label for="resume">Upload Resume (PDF):</label>
