added class for register link

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,5 +17,5 @@
 	<input type="text" id="confirmPass" name="confirmPass" />
 	<input type="submit" value="Sign Up" />
 </form>
-<a href="/auth/login">Have an account? Login here!</a>
+<a class="centered-link" href="/auth/login">Have an account? Login here!</a>
 <script src="/public/js/loginRegisterVal.js"></script>
