Made comment posting

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -14,18 +14,7 @@
         </form>
         <span>{{project.likes}} Likes</span>
         {{!-- Comments --}}
-        {{#if project.comments}}
-            <ul>
-                {{#each project.comments}}
-                    <li>
-                        {{this.author}}: {{this.text}}
-                        <span>({{this.createdAt}})</span>
-                    </li>
-                {{/each}}
-            </ul>
-        {{else}}
-            <p>No comments yet.</p>
-        {{/if}}
+        {{> commentsList comments=project.comments}}
         <form method="POST" action="/projects/{{project._id}}/comments">
             <textarea name="comment" placeholder="Add a comment..." required></textarea><br>
             <button type="submit">Post Comment</button>
@@ -40,3 +29,4 @@
         </ol>
     </div>
 </div>
+<script src="/public/js/comment.js"></script>
