Added newest and oldest post stat

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -26,6 +26,8 @@
 					{{/each}}
 				</ul>
 			</li>
+			<li>Oldest Post: {{stats.oldestPost.createdAt}}</li>
+			<li>Newest Post: {{stats.newestPost.createdAt}}</li>
 		</ul>
 	</div>
 	<div class="centerInfo">
