Default message if no posts

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -26,8 +26,8 @@
 					{{/each}}
 				</ul>
 			</li>
-			<li>Oldest Post: {{stats.oldestPost.createdAt}}</li>
-			<li>Newest Post: {{stats.newestPost.createdAt}}</li>
+			<li>Oldest Post: {{stats.oldestPost}}</li>
+			<li>Newest Post: {{stats.newestPost}}</li>
 		</ul>
 	</div>
 	<div class="centerInfo">
