Fixed typo projets

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -9,7 +9,7 @@
 <div class="container">
 	<div class="leftStats">
 		<ul>
-			<li>{{stats.numProjects}} Projets</li>
+			<li>{{stats.numProjects}} Projects</li>
 			<li>{{stats.numUsers}} Users</li>
 			<li>Top project tags:
 				<ul>
