--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,10 +1,18 @@
 {{! Handlebars specifically for the landing page for new users }}
 <div class="navbar">
+	<div class="nav-left">
+		<img src="../public/LogoB.png" class="logo" />
+		<span class="brand-text">GitMatches</span>
+	</div>
 	<a href="/auth/login">Join or Login</a>
 </div>
+
 <header>
 	<h1>GitMatches</h1>
-	<h2>Connecting Developers to Open Source Projects</h2>
+	<div class="message-container">
+		<div class="messageleft">Connecting Developers to </div>
+		<div class="messageright">Open Source Projects </div>
+	</div>
 </header>
 <div class="container">
 	<div class="leftStats">
