--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,12 @@
 {{! Handlebars for the login page }}
 <div class="navbar">
+	<div class="nav-left">
+		<img src="../public/LogoB.png" class="logo" />
+		<span class="brand-text">GitMatches</span>
+	</div>
 	<a href="/">Home</a>
 </div>
+
 <h1>GitMatches</h1>
 {{#if error}}
 	<p class="error" id="error">{{error}}</p>
