add header background image

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -7,7 +7,7 @@
 	<a href="/auth/login">Join or Login</a>
 </div>
 
-<header>
+<header class="headerbg">
 	<h1>GitMatches</h1>
 	<div class="message-container">
 		<div class="messageleft">Connecting Developers to </div>
