--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,6 +45,12 @@ body {
 	}
 }
 
+/* header background image */
+.headerbg {
+    background-image: url("/public/headerbg.jpg");
+    background-size: cover;
+}
+
 header h1 {
 	font-size: 4rem;
 	margin-bottom: 0.5rem;
@@ -61,7 +67,6 @@ header h1 {
 		transform: translateY(0);
 	}
 }
-
 
 .navbar {
 	background-color: #ffffff;
