Plotly chart shows up - and rearranged some elements for now

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -16,28 +16,16 @@
 </header>
 <div class="container">
 	<div class="leftStats">
+		<p>Add completed projects stats</p>
+		<p>As well as possibly some more stats in general</p>
+		<P>And make it look pretty - add a graph, perchance</P>
 		<ul>
-			<li>{{stats.numProjects}} Projects</li>
+			<li>{{stats.numProjects}} active projects</li>
+			<ll>{{stats.numProjectsCompleted}} completed projects</ll>
 			<li>{{stats.numUsers}} Users</li>
-			<li>Top project tags:
-				<ul>
-					{{#each stats.topPostTags}}
-					<li>{{this}}</li>
-					{{/each}}
-				</ul>
-			</li>
-			<li>
-				Top user tags:
-				<ul>
-					{{#each stats.topUserTags}}
-					<li>{{this}}</li>
-					{{/each}}
-				</ul>
-			</li>
-			<li>Oldest Post: {{stats.oldestPost}}</li>
-			<li>Newest Post: {{stats.newestPost}}</li>
+			<li>Oldest active post: {{stats.oldestPost}}</li>
+			<li>Newest active post: {{stats.newestPost}}</li>
 		</ul>
-		<div class="userTagsChart" id="userTagsChart" data-chart-data='{{json chartData}}'></div>
 	</div>
 	<div class="centerInfo">
 		<p>Welcome to GitMatches, your source for finding high quality, open source
@@ -45,7 +33,9 @@
 
 	</div>
 	<div class="rightStats">
-		<p>Need to get active/completed project stats here</p>
+		<div class="userTagsChart" id="userTagsChart" data-chart-data='{{json userChartData}}'></div>
+		<div class="postTagsChart" id="postTagsChart" data-chart-data='{{json postChartData}}'></div>
 	</div>
 </div>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="/public/js/renderCharts.js"></script>
